# mediapipe-tutorial

./: .gitignore  README.md  setup-env-wsl2.sh  setup_env.rc
.devcontainer/: devcontainer.json
01-video-decoder/: Makefile  README.md  WORKSPACE  test_video.py
01-video-decoder/videodecoder/: BUILD.bazel  main.cc  videodecoder_calculator.cc
