load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_visibility = ["//videodecoder:internal"],
)

package_group(
    name = "internal",
    packages = [
        "//videodecoder/...",
    ],
)

cc_binary(
    name = "videodecoder",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
)
